unpackaged/main/default/objects/zkmulti__OtherSetting__c/zkmulti__OtherSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores custom settings</description>
    <label>Other Setting</label>
</CustomObject>