unpackaged/main/default/objects/zkmulti__OtherSetting__c/fields/zkmulti__CheckboxValue__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__CheckboxValue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox Value</label>
    <type>Checkbox</type>
</CustomField>