unpackaged/main/default/objects/zkmulti__OtherSetting__c/fields/zkmulti__DateTimeValue__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__DateTimeValue__c</fullName>
    <label>DateTime Value</label>
    <type>DateTime</type>
</CustomField>