unpackaged/main/default/objects/zkmulti__OtherSetting__c/fields/zkmulti__DateValue__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__DateValue__c</fullName>
    <label>Date Value</label>
    <type>Date</type>
</CustomField>